created the index.html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Game Zone</title>
-    <link rel="stylesheet" href="">
-
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
