--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <a href="">About Us</a>
             <a href="">Developers</a>
             <button class="login-btn"> <a href="">Follow Us On</a>
-                <span><i class="fa-brands fa-youtube"></i></span>
-                <span><i class="fa-brands fa-tiktok"></i></span>
+                <span><i class="fa-brands fa-youtube" style="color: red;" ></i></span>
+                <span><i class="fa-brands fa-tiktok" style="color: #000000;" ></i></span>
             </button>
         </div>
     </nav>
@@ -167,10 +167,19 @@
             <div class="icon">
                 <span><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></span>
                 <span><i class="fa-brands fa-facebook" style="color: #1876f2;" ></i></span>
-                <span><i class="fa-brands fa-youtube" style="color: #ff0000;" ></i></span>
+                <span><i class="fa-brands fa-youtube" style="color:red;" ></i></span>
                 <span><i class="fa-brands fa-linkedin" style="color: #ffffff;" ></i></span>
                 <span><i class="fa-brands fa-instagram" style="color: #ffffff;" ></i></span>
                 <span><i class="fa-brands fa-apple" style="color: #ffffff;" ></i></span>
+            </div>
+            <div class="Conditions">
+                <p>Terms and Conditions   </p>
+                <p>Privacy Policy</p>
+                <p>Cookie Policy</p>
+                <p>Privacy Settings</p>
+            </div>
+            <div class="gamer" >
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
             </div>
         </section>
 </footer>
