added the conditions container

--- a/index.html
+++ b/index.html
@@ -121,32 +121,24 @@
      </section>
    </main>
    <section class="logo-contain">
-    <div>
-        <button>
-            <img src="images/Rectangle 11.png" alt=""> <p>Action Games</p>
-        </button>
+    <div class="logo-box">
+        <img src="images/Rectangle 11.png" alt=""> <p>Action Games</p>
     </div>
-    <div>
-        <button><img src="images/Rectangle 12.png" alt=""> <p>Adventure Games</p></button>
+    <div class="logo-box">
+        <img src="images/Rectangle 12.png" alt=""> <p>Adventure Games</p>
     </div>
-    <div>
-        <button><img src="images/Rectangle 13.png" alt=""> <p>Arcade Games</p></button>
-        
+    <div class="logo-box">
+        <img src="images/Rectangle 13.png" alt=""> <p>Arcade Games</p>
     </div>
-    <div>
-        <button><img src="images/Rectangle 14.png" alt=""> <p>Educational Games</p></button>
+    <div class="logo-box">
+        <img src="images/Rectangle 14.png" alt=""> <p>Educational Games</p>
     </div>
-    <div>
-        <button>
-            <img src="images/Rectangle 15.png" alt=""> <p>Word Games</p>
-        </button>
+    <div class="logo-box">
+        <img src="images/Rectangle 15.png" alt=""> <p>Word Games</p>
     </div>
-    <div>
-        <button>
-            <img src="images/Rectangle 16.png" alt=""> <p>Role Palying Games</p>
-        </button>
+    <div class="logo-box">
+        <img src="images/Rectangle 16.png" alt=""> <p>Role Palying Games</p>
     </div>
-   
    </section>
    
 <footer>
